<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Logistics.SignupActivity">

    <include
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:id="@+id/scrollView">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.routemaker.rm.SignupActivity"
            tools:showIn="@layout/activity_signup"
            android:id="@+id/relativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/first_name"
                android:id="@+id/first_name_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textPersonName"
                android:ems="13"
                android:id="@+id/first_name_field"
                android:hint="@string/first_name"
                android:layout_below="@+id/first_name_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/last_name"
                android:id="@+id/last_name_text"
                android:layout_below="@+id/first_name_field"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textPersonName"
                android:ems="13"
                android:id="@+id/last_name_field"
                android:hint="@string/last_name"
                android:layout_below="@+id/last_name_text"
                android:layout_alignLeft="@+id/first_name_field"
                android:layout_alignStart="@+id/first_name_field" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/email_text"
                android:layout_below="@+id/last_name_field"
                android:layout_alignLeft="@+id/last_name_text"
                android:layout_alignStart="@+id/last_name_text" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textEmailAddress"
                android:ems="13"
                android:id="@+id/email_field"
                android:hint="@string/email"
                android:layout_below="@+id/email_text"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/password_text"
                android:layout_below="@+id/email_field"
                android:layout_alignLeft="@+id/email_text"
                android:layout_alignStart="@+id/email_text" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textPassword"
                android:ems="13"
                android:id="@+id/password_field"
                android:hint="@string/password"
                android:layout_below="@+id/password_text"
                android:layout_alignLeft="@+id/email_field"
                android:layout_alignStart="@+id/email_field" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textPassword"
                android:ems="13"
                android:id="@+id/password_field_confirm"
                android:hint="@string/password_confirm"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/password_field" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/age_group"
                android:id="@+id/age_group_text"
                android:layout_below="@+id/password_field_confirm"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_group_radio"
                android:layout_below="@+id/age_group_text"
                android:layout_alignLeft="@+id/password_field_confirm"
                android:layout_alignStart="@+id/password_field_confirm"
                android:layout_alignRight="@+id/password_field_confirm"
                android:layout_alignEnd="@+id/password_field_confirm">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenties"
                    android:id="@+id/age_group_20s"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirties"
                    android:id="@+id/age_group_30s"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forties"
                    android:id="@+id/age_group_40s"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifties"
                    android:id="@+id/age_group_50s"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixties"
                    android:id="@+id/age_group_60s"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/preference"
                android:id="@+id/preference_text"
                android:layout_below="@+id/age_group_radio"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum"
                android:id="@+id/preference_museum"
                android:checked="false"
                android:layout_below="@+id/preference_text"
                android:layout_alignLeft="@+id/age_group_radio"
                android:layout_alignStart="@+id/age_group_radio" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art"
                android:id="@+id/preference_art"
                android:layout_below="@+id/preference_museum"
                android:layout_alignStart="@+id/age_group_radio"
                android:layout_alignLeft="@+id/age_group_radio"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_life"
                android:id="@+id/preference_nightlife"
                android:layout_below="@+id/preference_art"
                android:layout_alignStart="@+id/age_group_radio"
                android:layout_alignLeft="@+id/age_group_radio"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment"
                android:id="@+id/preference_entertainment"
                android:layout_below="@+id/preference_nightlife"
                android:layout_alignStart="@+id/age_group_radio"
                android:layout_alignLeft="@+id/age_group_radio"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:id="@+id/preference_food"
                android:checked="false"
                android:layout_alignTop="@+id/preference_museum"
                android:layout_alignRight="@+id/age_group_radio"
                android:layout_alignEnd="@+id/age_group_radio" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landmark"
                android:id="@+id/preference_landmark"
                android:checked="false"
                android:layout_below="@+id/preference_food"
                android:layout_alignLeft="@+id/preference_food"
                android:layout_alignStart="@+id/preference_food" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoor"
                android:id="@+id/preference_outdoor"
                android:checked="false"
                android:layout_below="@+id/preference_landmark"
                android:layout_alignLeft="@+id/preference_landmark"
                android:layout_alignStart="@+id/preference_landmark" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping"
                android:id="@+id/preference_shopping"
                android:checked="false"
                android:layout_below="@+id/preference_outdoor"
                android:layout_alignLeft="@+id/preference_outdoor"
                android:layout_alignStart="@+id/preference_outdoor" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_message"
                android:id="@+id/register_button"
                android:layout_below="@+id/preference_entertainment"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

